--- a/src/my_robot/config/base_local_planner_params.yaml
+++ b/src/my_robot/config/base_local_planner_params.yaml
@@ -1,9 +1,11 @@
-controller_frequency: 10
+# #-symbol = tuned
+
+controller_frequency: 10.0
 
 TrajectoryPlannerROS:
   max_vel_x: 0.5 
   min_vel_x: 0.01
-  max_vel_theta: 1.57 #1.57
+  max_vel_theta: 1.57 #1.00
 
   min_in_place_vel_theta: 0.1 #0.314
 
@@ -16,8 +18,10 @@ TrajectoryPlannerROS:
   vx_samples: 5.0
   vtheta_samples: 10.0
 
-  pdist_scale: 5.0 #0.6
-  gdist_scale: 0.6 # 0.8
+  pdist_scale: 0.6
+  gdist_scale: 0.6 #0.8
   occdist_scale: 0.15 #0.01
 
-  holonomic_robot: true #false
+  holonomic_robot: true
+  
+  meter_scoring: true #false
