--- a/src/my_robot/config/costmap_common_params.yaml
+++ b/src/my_robot/config/costmap_common_params.yaml
@@ -1,13 +1,13 @@
 map_type: costmap
 
-obstacle_range: 2.0
-raytrace_range: 3.0 #3.0
+obstacle_range: 3.0
+raytrace_range: 3.0
 
-transform_tolerance:  0.2 # 0.0
+transform_tolerance:  0.2
 
-robot_radius: 0.25 # 0.0
-inflation_radius: 0.05
-cost_scaling_factor: 5.0
+robot_radius: 0.1
+inflation_radius: 0.3
+cost_scaling_factor: 15
 
 observation_sources: laser_scan_sensor
 
