--- a/src/my_robot/config/base_local_planner_params.yaml
+++ b/src/my_robot/config/base_local_planner_params.yaml
@@ -19,8 +19,8 @@ TrajectoryPlannerROS:
   vtheta_samples: 10.0
 
   pdist_scale: 0.6
-  gdist_scale: 0.8 #0.6 0.8
-  occdist_scale: 0.01 #0.15 #0.01
+  gdist_scale: 0.8
+  occdist_scale: 0.02
 
   holonomic_robot: true
   
