--- a/src/my_robot/config/costmap_common_params.yaml
+++ b/src/my_robot/config/costmap_common_params.yaml
@@ -1,12 +1,12 @@
 map_type: costmap
 
-obstacle_range: 3.0
-raytrace_range: 3.0
+obstacle_range: 1.0 #3.0
+raytrace_range: 1.0 #3.0
 
 transform_tolerance:  0.2
 
-robot_radius: 0.1
-inflation_radius: 0.3
+robot_radius: 0.15
+inflation_radius: 0.5
 cost_scaling_factor: 15
 
 observation_sources: laser_scan_sensor
